--- a/style/style.css
+++ b/style/style.css
@@ -859,7 +859,7 @@ h5 {
   max-width: 1536px;
   margin-inline: auto;
   position: relative;
-  height: 70px;
+  height: 50%;
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
@@ -871,15 +871,15 @@ h5 {
 
 @keyframes scrollRight {
   to {
-    right: -200px;
+    right: -20%;
   }
 }
 
 .skill {
-  width: 70px;
-  height: 70px;
+  aspect-ratio: 1 / 1;
+  height: 100%;
   position: absolute;
-  right: max(calc(100px * 6), 100%);
+  right: max(calc(20% * 6), 100%);
   animation-name: scrollRight;
   animation-duration: 20s;
   animation-timing-function: linear;
