--- a/style/style.css
+++ b/style/style.css
@@ -860,6 +860,84 @@ h5 {
   flex-direction: column;
 }
 
+@media (max-width: 2000px){
+  .loader {
+    margin-top: 20%;
+    width: 85px;
+    height: 50px;
+    --g1:conic-gradient(from  90deg at left   3px top   3px,#0000 90deg,#fff 0);
+    --g2:conic-gradient(from -90deg at bottom 3px right 3px,#0000 90deg,#fff 0);
+    background:var(--g1),var(--g1),var(--g1), var(--g2),var(--g2),var(--g2);
+    background-position: left,center,right;
+    background-repeat: no-repeat;
+    animation: l9 1s infinite;
+  }
+
+  .game p{
+    font-size: 30px;
+  }
+
+  @keyframes l9 {
+    0%   {background-size:25px 50% ,25px 50% ,25px 50%}
+    25%  {background-size:25px 100%,25px 50% ,25px 50%}
+    50%  {background-size:25px 50% ,25px 100%,25px 50%}
+    75%  {background-size:25px 50% ,25px 50% ,25px 100%}
+    100% {background-size:25px 50% ,25px 50% ,25px 50%}
+  }
+}
+
+@media (max-width: 950px){
+  .loader {
+    margin-top: 20%;
+    width: 68px;
+    height: 40px;
+    --g1:conic-gradient(from  90deg at left   3px top   3px,#0000 90deg,#fff 0);
+    --g2:conic-gradient(from -90deg at bottom 3px right 3px,#0000 90deg,#fff 0);
+    background:var(--g1),var(--g1),var(--g1), var(--g2),var(--g2),var(--g2);
+    background-position: left,center,right;
+    background-repeat: no-repeat;
+    animation: l9 1s infinite;
+  }
+
+  .game p{
+    font-size: 25px;
+  }
+
+  @keyframes l9 {
+    0%   {background-size:20px 50% ,20px 50% ,20px 50%}
+    25%  {background-size:20px 100%,20px 50% ,20px 50%}
+    50%  {background-size:20px 50% ,20px 100%,20px 50%}
+    75%  {background-size:20px 50% ,20px 50% ,20px 100%}
+    100% {background-size:20px 50% ,20px 50% ,20px 50%}
+  }
+}
+
+@media (max-width: 700px){
+  .loader {
+    margin-top: 10%;
+    width: 51px;
+    height: 30px;
+    --g1:conic-gradient(from  90deg at left   3px top   3px,#0000 90deg,#fff 0);
+    --g2:conic-gradient(from -90deg at bottom 3px right 3px,#0000 90deg,#fff 0);
+    background:var(--g1),var(--g1),var(--g1), var(--g2),var(--g2),var(--g2);
+    background-position: left,center,right;
+    background-repeat: no-repeat;
+    animation: l9 1s infinite;
+  }
+
+  .game p{
+    font-size: 20px;
+  }
+
+  @keyframes l9 {
+    0%   {background-size:15px 50% ,15px 50% ,15px 50%}
+    25%  {background-size:15px 100%,15px 50% ,15px 50%}
+    50%  {background-size:15px 50% ,15px 100%,15px 50%}
+    75%  {background-size:15px 50% ,15px 50% ,15px 100%}
+    100% {background-size:15px 50% ,15px 50% ,15px 50%}
+  }
+}
+
 /*#endregion*/
 
 
