--- a/style/style.css
+++ b/style/style.css
@@ -631,7 +631,7 @@ h5 {
 
 .photo {
   grid-area: photo;
-  aspect-ratio: 1 / 1;
+  
   background-image: url("../src/img/foto_perfil.webp");
   background-size: cover;
   background-position: center;
@@ -703,19 +703,27 @@ h5 {
 
 .projects {
   grid-area: projects;
+
+  background-image: url("../src/img/Imagen_Games.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+  transition: background-size 0.4s ease-out -0.1s, opacity 0.2s ease-out 0s;
 }
 
 .projects a{
-  z-index: 10;
   width: 100%;
   height: 100%;
   align-content: center;
-  text-decoration: none;
 }
 
 .projects:hover{
-  background-color: var(--clr-dark-boxes-bg-hover);
+  cursor: pointer;
+  border: solid 3px var(--clr-hover);
   box-shadow: 0px 0px 10px 1px var(--clr-hover);
+  background-size: 120% 120%;
 }
 
 /*#endregion*/
@@ -771,24 +779,28 @@ h5 {
 
 .art {
   grid-area: art;
+
+  background-image: url("../src/img/Imagen_Art.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+
+  transition: background-size 0.4s ease-out 0s, background-position 0.2s ease-out 0s;
 }
 
 .art a{
-  z-index: 10;
   width: 100%;
   height: 100%;
   align-content: center;
-  text-decoration: none;
 }
 
 .art:hover{
-  background-color: var(--clr-dark-boxes-bg-hover);
-
-  box-shadow: 0px 0px 10px 1px var(--clr-hover)
-}
-
-.art h3 {
-  font-size: 3rem;
+  cursor: pointer;
+  border: solid 3px var(--clr-hover);
+  box-shadow: 0px 0px 10px 1px var(--clr-hover);
+  background-size: 120% 120%;
+  background-position: 50% 80%;
 }
 
 /*#endregion*/
@@ -800,7 +812,6 @@ h5 {
   grid-area: itchio;
   aspect-ratio: 2 / 1;
 
-  background-color: #FA5C5C;
 }
 
 .itchio a{
@@ -818,13 +829,13 @@ h5 {
 
 .itchio:hover{
   cursor: pointer;
-  background-color: #FA5C5C;
+  background-color: var(--clr-dark-boxes-bg-hover);
   box-shadow: 0px 0px 10px 1px var(--clr-hover)
 
 }
 
 .itchio:hover::after {
-  background-color: #FA5C5C;
+  background-color: var(--clr-dark-boxes-bg-hover);
 }
 
 
