--- a/style/style.css
+++ b/style/style.css
@@ -206,10 +206,10 @@ h5 {
   position: absolute;
   align-self: center;
   content: '';
-  /*width: 60%;*/
+
   width: 30%;
   height: 250%;
-  /*background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(0, 200, 255, 0.9) 50%, rgba(255, 255, 255, 0));*/
+
   background: var(--clr-hover);
 
   transform: rotate(45deg);
@@ -1209,6 +1209,54 @@ h5 {
   .button-play:hover img{
     width: 0px;
     margin-left: 0px;
+  }
+
+  .interactable:hover::before{
+    opacity: 0%;
+  }
+  
+  .interactable:hover::after {
+    background-color: var(--clr-dark-boxes-bg);
+  }
+
+  .es:hover{
+    cursor: pointer;
+    border: solid 0px;
+    box-shadow: 0px 0px 0px 0px;
+    background-size: 100%;
+    opacity: 70%;
+  }
+
+  .en:hover{
+    cursor: pointer;
+    border: solid 0px;
+    box-shadow: 0px 0px 0px 0px;
+    background-size: 100%;
+    opacity: 70%;
+  }
+
+  .github:hover{
+    box-shadow: 0px 0px 0px 0px;
+    background-color: var(--clr-dark-boxes-bg);
+  }
+
+  .itchio:hover{
+    box-shadow: 0px 0px 0px 0px;
+    background-color: var(--clr-dark-boxes-bg);
+  }
+
+  .projects:hover{
+    cursor: pointer;
+    border: solid 0px;
+    box-shadow: 0px 0px 0px 0px;
+    background-size: 100% 100%;
+  }
+
+  .art:hover{
+    cursor: pointer;
+    border: solid 0px;
+    box-shadow: 0px 0px 0px 0px;
+    background-size: 100% 100%;
   }
 }
 
